--- a/home.css
+++ b/home.css
@@ -1,43 +1,73 @@
 header {
     width: 99%;
-    height: 60px;
-    background-color: rgb(95, 89, 89);
+    height: 80px;
+    background-color: rgb(255, 255, 255);
     border-radius: 20px;
     opacity: 0.7;
 }
 
-body {
-    height: 70%;
-    width: 100%;
+body, html {
+    margin: 0;
+    padding: 0;
+    background-image:url(1644955946_15-phonoteka-org-p-intellektualnii-fon-18.jpg);
 }
 
 footer {
-    background-color: rgba(34, 159, 197, 0.678);
+    background-color: rgb(0, 0, 0);
     width: 100%;
     height: 100px;
-    margin-top: 25%;
+    margin-top: 35%;
 }
 
 p {
     width: 40%;
     height: 50%;
+    margin-top: 1%;
+    color: rgb(255, 255, 255);
+}
+h1 {
+    margin-top: 3%;
+    color: rgb(255, 255, 255);
 }
 
-button {
+/* button {
     height: 50px;
     width: 50px;
     margin-left: 50px;
-}
-.profile{
-    margin-left:97%;
-    width: 2%;
-    height: 60%;
+} */
+
+.profile {
+    width: 15%;
+    height: 70%;
+    text-align: right;
 }
 
 .baseimg {
-    width: 50%;
-    height: 20%;
-    margin-left: 50%;
-    margin-top: 3%;
-    border-radius: 2%;
+    width: 65%;
+    height: 40%;
+    margin-top: 1%;
+    border-radius: 3%;
+    background-attachment: fixed;
+    background-clip: border-box;
 }
+
+p2 {
+    color: rgb(255, 255, 255);
+    text-align: center;
+}
+
+
+/* nav{
+    width: 100%;
+}
+
+.menu{
+    display: flex;
+    justify-content: flex-end;
+    background-color: rgb(255, 255, 255);
+    list-style: none;
+}
+.menu li{
+    position: relative;
+    padding: 10px;
+} */
