--- a/home.css
+++ b/home.css
@@ -1,33 +1,39 @@
 header {
-    width: 99%;
-    height: 80px;
+    width: 100%;
     background-color: rgb(255, 255, 255);
     border-radius: 20px;
-    opacity: 0.7;
+    padding: 0;
+    margin: 0;
 }
 
 body, html {
     margin: 0;
     padding: 0;
-    background-image:url(1644955946_15-phonoteka-org-p-intellektualnii-fon-18.jpg);
+    background: linear-gradient(45deg, #574BCD, #2999AD, #41E975);
 }
 
-footer {
-    background-color: rgb(0, 0, 0);
-    width: 100%;
-    height: 100px;
-    margin-top: 35%;
+.wheit {
+    background-color: #fff;
 }
 
 p {
-    width: 40%;
-    height: 50%;
-    margin-top: 1%;
     color: rgb(255, 255, 255);
+}
+.text1 {
+    width: 80%;
+    height: 30%;
+    margin-top: 8%;
+    margin-left: -40%;
+}
+.text {
+    width: 80%;
+    height: 30%;
+    margin-top: 8%;
+    margin-left: 3%;
 }
 h1 {
     margin-top: 3%;
-    color: rgb(255, 255, 255);
+    color: rgb(253, 242, 242);
 }
 
 /* button {
@@ -37,15 +43,25 @@ h1 {
 } */
 
 .profile {
-    width: 15%;
-    height: 70%;
+    width: 25px;
+    height: 30px;
     text-align: right;
 }
 
+.baseimg1 {
+    width: 500px;
+    height: 350px;
+    margin-top: 8%;
+    margin-left: 2%;
+    border-radius: 3%;
+    background-attachment: fixed;
+    background-clip: border-box;
+}
 .baseimg {
-    width: 65%;
-    height: 40%;
-    margin-top: 1%;
+    width: 500px;
+    height: 350px;
+    margin-top: 8%;
+    margin-left: -5%;
     border-radius: 3%;
     background-attachment: fixed;
     background-clip: border-box;
@@ -56,18 +72,72 @@ p2 {
     text-align: center;
 }
 
-
-/* nav{
-    width: 100%;
+.box1 {
+    height: 100px;
+    width: 100px;
 }
 
-.menu{
-    display: flex;
-    justify-content: flex-end;
-    background-color: rgb(255, 255, 255);
-    list-style: none;
-}
-.menu li{
+/*Trigger Button*/
+.login-trigger {
+    font-weight: bold;
+    color: #fff;
+    background: linear-gradient(to bottom right, #b05574, #f87e7b);
+    padding: 15px 30px;
+    border-radius: 30px;
     position: relative;
-    padding: 10px;
-} */
+    top: 50%;
+  }
+  
+  /*Modal*/
+  h4 {
+    font-weight: bold;
+    color: #fff;
+  }
+  .close {
+    color: #fff;
+    transform: scale(1.2);
+  }
+  .modal-content {
+    font-weight: bold;
+    background: linear-gradient(to bottom right, #f87e7b, #b05574);
+  }
+  .form-control {
+    margin: 1em 0;
+  }
+  .form-control:hover,
+  .form-control:focus {
+    box-shadow: none;
+    border-color: #fff;
+  }
+  .username,
+  .password {
+    border: none;
+    border-radius: 0;
+    box-shadow: none;
+    border-bottom: 2px solid #eee;
+    padding-left: 0;
+    font-weight: normal;
+    background: transparent;
+  }
+  .form-control::-webkit-input-placeholder {
+    color: #eee;
+  }
+  .form-control:focus::-webkit-input-placeholder {
+    font-weight: bold;
+    color: #fff;
+  }
+  .login {
+    padding: 6px 20px;
+    border-radius: 20px;
+    background: none;
+    border: 2px solid #fab87f;
+    color: #fab87f;
+    font-weight: bold;
+    transition: all 0.5s;
+    margin-top: 1em;
+  }
+  .login:hover {
+    background: #fab87f;
+    color: #fff;
+  }
+  
