--- a/stylesheets/kopzina.css
+++ b/stylesheets/kopzina.css
@@ -1,28 +1,30 @@
-
 header {
     background: linear-gradient(45deg, #574BCD, #2999AD, #41E975);
+    height: 100px;
 }
 body {
     background: radial-gradient(at top, #8929AD, #436AAC, #43B7B8)no-repeat;
     height: 100%;
 }
-
-.wheit {
-    background-color: #fff;
-}
-img {
-    height: 80px;
-}
-p {
-    color: #fff;
-}
-
 .a {
-    height: 150px;
+    height: 216px;
     width: 150px;
     background-color: lightslategray;
     border-radius: 5%;
     margin-left: 20px;
-    padding: 10px;
-    padding-left: 0px;
+    margin-top: 20px;
+    padding: 15px;
+    padding-left: 35px;
+    padding-top: 10px;
+}
+main {
+    width: 100%;
+    height: 750px;
+}
+.b {
+    height: 414px;
+    width: 100px;
+}
+.wheit {
+    background-color: #fff;
 }
